fixed deprecated constructor invocations (e.g. new Double(0) -> Double.valueOf(0)